mobile layout done

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
     <header><p>a</p></header>
     <main>
-        <section><p>b</p></section>
-        <section><p>c</p></section>
-        <section><p>d</p></section>
-        <section><p>e</p></section>
-        <section><p>f</p></section>
-        <section><p>g</p></section>
-        <section><p>h</p></section>
-
+        <section>
+            <p>b</p>
+            <p>c</p>
+            <p>d</p>
+            <p>e</p>
+            <p>f</p>
+            <p>g</p>
+            <p>h</p>
+            <p>i</p>
+    </section>
     </main>
-    <footer><p>i</p></footer>
 </body>
 </html>
