--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <title>responsev web page</title>
+    <title>responsive web page</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header><p>a</p></header>
-    <main>
-        <section>
-            <p>b</p>
-            <p>c</p>
-            <p>d</p>
-            <p>e</p>
-            <p>f</p>
-            <p>g</p>
-            <p>h</p>
-            <p>i</p>
-    </section>
-    </main>
+    <p>a</p>
+    <p>b</p>
+    <p>c</p>
+    <p>d</p>
+    <p>e</p>
+    <p>f</p>
+    <p>g</p>
+    <p>h</p>
+    <p id="last">i</p>
 </body>
 </html>
