--- a/index.html
+++ b/index.html
@@ -11,22 +11,49 @@
     <link rel="stylesheet" href="css/modules.css">
 </head>
 <body>
-    <div id="a">a</div>
-    <div id="b">b</div>
-    <div id="one">
-        <div id="c">c</div>
-        <div id="d">d</div>
-    </div>
-    <div id="two">
-        <div id="first">
-            <div id="e">e</div>
-            <div id="f">f</div>
+    <header>
+        <div class="box">
+            <p>a</p>
         </div>
-        <div id="second">
-            <div id="g">g</div>
-            <div id="h">h</div>
+    </header>
+    <main>
+        <aside>
+            <div class="box ">
+                <p id="b">b</p>
+            </div>
+        </aside>
+        <div id="mainSec">
+            <section id="stRow">
+                <div class="box">
+                    <p id="c">c</p>
+                </div>
+                <div class="box">
+                    <p id="d">d</p>
+                </div>
+            </section>
+
+            <section id="sndRow">
+                <div class="box">
+                    <p id="e">e</p>
+                </div>
+                <div class="box">
+                    <p id="f">f</p>
+                </div>
+                <div class="box">
+                    <p id="g">g</p>
+                </div>
+                <div class="box">
+                    <p id="h">h</p>
+                </div>
+            </section>
+
+            <section id="footer">
+                <div class="box">
+                    <p>i</p>
+                </div>
+            </section>
         </div>
-    </div>
-    <div id="last">i</div>
+    </main>
+
 </body>
 </html>
